# gpurun

./: .editorconfig  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
ci/: lint-pyright.sh
src/gpurun/: __init__.py  cli.py
tests/: test_cli.py
